--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@typescript-eslint/parser": "^6.7.0",
     "ajv": "^8.11.2",
     "babel-loader": "^9.1.3",
+    "browserslist": "^4.23.0",
     "core-js": "^3.32.2",
     "css-loader": "^6.7.2",
     "eslint": "^8.49.0",
@@ -44,9 +45,7 @@
     "grunt-contrib-watch": "^1.1.0",
     "grunt-eslint": "^24.3.0",
     "grunt-git": "^1.1.1",
-    "grunt-jsdoc": "^2.4.1",
     "grunt-webpack": "^6.0.0",
-    "jsdoc": "^4.0.0",
     "npm-check-updates": "^16.14.3",
     "qunit": "^2.19.3",
     "style-loader": "^3.3.1",
